bootstrapHW-fixed some issues with the main content spacing

--- a/HTMLpractice/bootstrapPractice/assets/stylesheet.css
+++ b/HTMLpractice/bootstrapPractice/assets/stylesheet.css
@@ -9,8 +9,22 @@
 }
 
 
-.bd.search{
+/* .bd.search{
 
-    
+
+} */
+
+body,html{
+
+    color:red
 }
 
+/* #content{
+
+    position:absolute;
+    top: 100px;
+    left: 0;
+    width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+} */
